# libspiro

./: .gitignore  AUTHORS  ChangeLog  INSTALL-git.md  Makefile  Makefile.am  Makefile.in  README  README-GeorgeWilliams  README.md  aclocal.m4  bezctx.c  bezctx.h  bezctx.md  bezctx_intf.h  configure  configure.ac  configure.in  fontforge-debug.sh  fontforge.sh  get-spiro-src.sh  libspiro.3  libspiro.pc.in  spiro-config.h.in  spiro.c  spiro.h  spiro_intf.h  spiroentrypoints.c  spiroentrypoints.h  zmisc.h
.github/workflows/: main.yml
java/: ShowPlate.java  Spiro.java  SpiroBezierContext.java  SpiroCP.java  SpiroCanvas.java  SpiroGeneralPath.java  SpiroPointType.java
tests/: Makefile.am  Makefile.in  call-test.c  call-test0.c  call-test1.c  call-test10.c  call-test11.c  call-test12.c  call-test13.c  call-test14.c  call-test15.c  call-test16.c  call-test17.c  call-test18.c  call-test19.c  call-test2.c  call-test20.c  call-test21.c  call-test3.c  call-test4.c  call-test5.c  call-test6.c  call-test7.c  call-test8.c  call-test9.c  call-testm.c  unit-test.c
